--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse order-md-0 ms-lg-5" id="mainNav1">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item mt-3 mt-md-0 me-lg-5">
-                            <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+                            <a class="nav-link active" aria-current="page" href="#section-home">Home Page</a>
                         </li>
                         <li class="nav-item mt-3 mt-md-0 me-lg-5">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#section-our-services">Our Services</a>
                         </li>
                         <li class="nav-item mt-3 mt-md-0">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="#section-reviews">Reviews</a>
                         </li>
                     </ul>
                 </div>
@@ -41,13 +41,13 @@
                 <div class="collapse navbar-collapse order-md-2 me-lg-5" id="mainNav2">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mt-3 mt-md-0">
-                            <a class="nav-link" href="#">Inquiries</a>
+                            <a class="nav-link" href="#section-faq">F.A.Q.</a>
                         </li>
                         <li class="nav-item ms-lg-5 mt-3 mt-md-0">
-                            <a class="nav-link" href="">Pricing</a>
+                            <a class="nav-link" href="#section-form">Email</a>
                         </li>
                         <li class="nav-item ms-lg-5 mt-3 mt-md-0">
-                            <a class="nav-link" href="#">Challenges</a>
+                            <a class="nav-link" href="#">Contacts</a>
                         </li>
                     </ul>
                 </div>
@@ -56,12 +56,12 @@
     </header>
 
     <main class="container-fluid p-0 justify-content-center">
-        <section class="container-lg row mx-auto">
+        <section id="section-home" class="container-lg row mx-auto">
             <div class="col-12 col-md-6">
-                <h1 class="display-4">
+                <h1 class="display-4 col-8">
                     Body paintings that Defies Your Soul
                 </h1>
-                <button type="button" class="btn btn-primary">Book a visit</button>
+                <button type="button" class="btn btn-primary mt-0 mt-md-4">Book a visit</button>
                 <div class="d-flex align-items-stretch mt-3 gap-3">
                     <button type="button" class="btn btn-primary">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
@@ -80,7 +80,7 @@
             </figure>
         </section>
 
-        <section class="container-fluid py-2 bg-secondary d-flex flex-column align-items-center">
+        <section class="container-fluid py-2 mt-5 mt-md-0 bg-secondary d-flex flex-column align-items-center">
             <div class="row container-lg justify-content-center align-items-center">
                 <div class="col-6 col-sm-4 col-lg-2 ">
                     <div class="brand-item text-center p-3">
@@ -115,21 +115,21 @@
             </div>
         </section>
 
-        <section class="container-lg row mt-5 mx-auto">
+        <section id="section-our-services" class="container-lg row mt-5 mx-auto">
             <h2 class="h2 text-center">Our Services</h2>
 
             <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Traditional</button>
+                <li class="nav-item " role="presentation">
+                    <button class="nav-link active text-uppercase fw-semibold" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Traditional</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Realism</button>
+                    <button class="nav-link text-uppercase fw-semibold" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Realism</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Piersings</button>
+                    <button class="nav-link text-uppercase fw-semibold" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Piersings</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Custom</button>
+                    <button class="nav-link text-uppercase fw-semibold" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Custom</button>
                 </li>
             </ul>
 
@@ -217,7 +217,7 @@
             </div>
         </section>
 
-        <section class="container-lg row mt-5 mx-auto">
+        <section id="section-reviews" class="container-lg row mt-5 mx-auto">
             <h2 class="h2 text-center">What Clients say?!</h2>
             <div class="col-4 mx-auto">
                 <div id="carouselExampleCaptions" class="carousel slide">
@@ -261,7 +261,7 @@
             </div>
         </section>
 
-        <section class="container-lg row mt-5 mx-auto">
+        <section id="section-faq" class="container-lg row mt-5 mx-auto">
             <h2 class="h2 text-center">F.A.Q.</h2>
 
             <div class="accordion" id="accordionExample">
@@ -318,7 +318,7 @@
             </div>
         </section>
 
-        <section class="container-lg mt-5 mx-auto col-10 col-md-6 mt-5 p-3 row bg-light text-dark rounded d-flex">
+        <section id="section-form" class="container-lg mt-5 mx-auto col-10 col-md-6 mt-5 p-3 row bg-light text-dark rounded d-flex">
             <div class="col-12 row">
                 <figure class="figure col-4 m-0">
                     <img src="images/email.svg" class="figure-img img-fluid rounded" alt="email illustration">
@@ -342,15 +342,14 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Заголовок модального окна</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                        <h1 class="modal-title h3" id="exampleModalLabel">Thanks for subscribing!</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        ...
+                        Description
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                        <button type="button" class="btn btn-primary">Сохранить изменения</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CONTINUE WATCHING</button>
                     </div>
                 </div>
             </div>
