--- a/index.html
+++ b/index.html
@@ -14,40 +14,41 @@
 </head>
 <body class="bg-dark text-white">
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top mt-3 mx-3 shadow">
-            <div class="container-lg text-uppercase">
-                <a class="navbar-brand ms-start mx-md-auto order-md-1" href="#">
+        <nav class="navbar navbar-expand-md navbar-dark mt-0 mt-lg-2 fixed-top">
+            <div class="container-lg mx-2 mx-lg-auto py-1 shadow bg-secondary text-uppercase rounded">
+                <a class="navbar-brand" href="#">
                     <img src="images/logo.svg" alt="Logo" width="70" height="70">
                 </a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav1, #mainNav2" aria-controls="mainNav1 mainNav2" aria-expanded="false" aria-label="Переключить навигацию">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Change navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse order-md-0 ms-lg-5" id="mainNav1">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item mt-3 mt-md-0 me-lg-5">
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ms-auto gap-4">
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#section-home">Home Page</a>
                         </li>
-                        <li class="nav-item mt-3 mt-md-0 me-lg-5">
+                        <li class="nav-item">
                             <a class="nav-link" href="#section-our-services">Our Services</a>
                         </li>
-                        <li class="nav-item mt-3 mt-md-0">
+                        <li class="nav-item">
                             <a class="nav-link" href="#section-reviews">Reviews</a>
                         </li>
-                    </ul>
-                </div>
-
-                <div class="collapse navbar-collapse order-md-2 me-lg-5" id="mainNav2">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mt-3 mt-md-0">
+                        <li class="nav-item">
                             <a class="nav-link" href="#section-faq">F.A.Q.</a>
                         </li>
-                        <li class="nav-item ms-lg-5 mt-3 mt-md-0">
+                        <li class="nav-item">
                             <a class="nav-link" href="#section-form">Email</a>
                         </li>
-                        <li class="nav-item ms-lg-5 mt-3 mt-md-0">
-                            <a class="nav-link" href="#">Contacts</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Contacts
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Telegram</a></li>
+                                <li><a class="dropdown-item" href="#">WhatsApp</a></li>
+                                <li><a class="dropdown-item" href="#">WeChat</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
