fixed accordion and stylized carousel

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
         </section>
 
         <section id="section-reviews" class="container-lg row mt-5 mx-auto">
-            <h2 class="h2 text-center">What Clients say?!</h2>
-            <div class="col-4 mx-auto">
-                <div id="carouselExampleCaptions" class="carousel slide">
+            <h2 class="h2 text-center mb-5">What Clients say?!</h2>
+            <div class="col-12 col-md-6 mx-auto">
+                <div id="carouselExampleCaptions" class="carousel slide p-4 bg-secondary rounded">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -230,33 +230,33 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/Star%203.png" class="d-block w-100" alt="star1">
+                            <img src="images/Star%203.png" class="d-block w-20 mx-auto" alt="star1">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Carolina Stones</h5>
-                                <p>I recently had the pleasure of getting a tattoo at Fighting Star, and I couldn't be happier with the entire experience. From start to finish, everything about this tattoo shop exceeded my expectations.</p>
+                                <h5 class="h4 text-start ">Carolina Stones</h5>
+                                <p class="text-start">I recently had the pleasure of getting a tattoo at Fighting Star, and I couldn't be happier with the entire experience. From start to finish, everything about this tattoo shop exceeded my expectations.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/Star%204.png" class="d-block w-100" alt="star2">
+                            <img src="images/Star%204.png" class="d-block w-20 mx-auto" alt="star2">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Star 2</h5>
-                                <p>...</p>
+                                <h5 class="h4 text-start">Star 2</h5>
+                                <p class="text-start">...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/Star%205.png" class="d-block w-100" alt="star3">
+                            <img src="images/Star%205.png" class="d-block w-20 mx-auto" alt="star3">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Star 3</h5>
-                                <p>...</p>
+                                <h5 class="h4 text-start">Star 3</h5>
+                                <p class="text-start">...</p>
                             </div>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon bg-primary rounded" aria-hidden="true"></span>
                         <span class="visually-hidden">Предыдущий</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon bg-primary rounded" aria-hidden="true"></span>
                         <span class="visually-hidden">Следующий</span>
                     </button>
                 </div>
@@ -269,7 +269,7 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed text-uppercase fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed text-uppercase fw-bold fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             What is the process?
                         </button>
                     </h2>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button text-uppercase fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <button class="accordion-button text-uppercase fw-bold fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             How you determine price?
                         </button>
                     </h2>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed text-uppercase fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed text-uppercase fw-bold fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Can you draw any tatoos?
                         </button>
                     </h2>
@@ -307,7 +307,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed text-uppercase fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <button class="accordion-button collapsed text-uppercase fw-bold fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             What is your Location?
                         </button>
                     </h2>
