--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <main class="container-fluid p-0 justify-content-center">
         <section id="section-home" class="container-lg row mx-auto hidden fade-in">
             <div class="col-12 col-md-6">
-                <h1 class="display-4 col-8">
-                    Body paintings that Defies Your Soul
+                <h1 class="display-4 col-8 mt-4">
+                    Body paintings that <span class="text-primary">Defies</span> Your Soul
                 </h1>
                 <button type="button" class="btn btn-primary mt-0 mt-md-4">Book a visit</button>
                 <div class="d-flex align-items-stretch mt-3 gap-3">
@@ -72,8 +72,8 @@
                         </svg>
                     </button>
                     <div>
-                        <span class="d-block">Mon-Fri 11:00-21:00</span>
-                        <span class="d-block">Sat-Sun 14:00-20:00</span>
+                        <span class="d-block"><span class="text-primary">Mon-Fri</span> 11:00-21:00</span>
+                        <span class="d-block"><span class="text-primary">Sat-Sun</span> 14:00-20:00</span>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     <button class="nav-link text-uppercase fw-semibold" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Realism</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link text-uppercase fw-semibold" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Piersings</button>
+                    <button class="nav-link text-uppercase fw-semibold" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Animal</button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link text-uppercase fw-semibold" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Custom</button>
@@ -151,7 +151,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="card my-3">
-                                <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
+                                <img src="./images/american.jpg" class="card-img-top" alt="tatto">
                                 <div class="card-body">
                                     <h5 class="card-title">Tatto Example Card</h5>
                                     <p class="card-text">Descriptioin</p>
@@ -162,40 +162,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="card my-3">
-                                <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
-                                    <p class="card-text">Descriptioin</p>
-                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="card my-3">
-                                <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
-                                    <p class="card-text">Descriptioin</p>
-                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="card my-3">
-                                <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
-                                    <p class="card-text">Descriptioin</p>
-                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="card my-3">
-                                <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
+                                <img src="https://d29osk548knyuf.cloudfront.net/media/images/IMG_1983.original.format-jpeg.jpg" class="card-img-top" alt="tatto">
                                 <div class="card-body">
                                     <h5 class="card-title">Tatto Example Card</h5>
                                     <p class="card-text">Descriptioin</p>
@@ -207,14 +174,81 @@
                 </div>
 
                 <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
-                    There
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="https://cdn.shopify.com/s/files/1/0558/6413/1764/files/Realism_Tattoo_1_1024x1024.webp?v=1720706790" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="./images/684a45267bae9f2d9f0d7577_DSC04341.jpeg" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="./images/34982375_212046306281436_2570810193222828032_n.jpg" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
-                    will be
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="https://cdn.shopify.com/s/files/1/0697/5845/2027/files/Untitleddesign_11_0e942ac8-0156-4040-90a7-cce0ee657cbf.png?v=1754112522" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="https://cdn.shopify.com/s/files/1/0315/6970/7052/files/animal-tattoos-and-their-meanings.png?v=1670357624" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card my-3">
+                                <img src="https://cdn.shopify.com/s/files/1/0315/6970/7052/files/Lion_Tatto_1024x1024.jpg?v=1710374881" class="card-img-top" alt="tatto">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <p class="card-text">Descriptioin</p>
+                                    <a href="#" class="btn btn-primary">Order a tattoo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">
-                    tabs
+                    <h3 class="h3 text-center m-4">This section is under development...</h3>
                 </div>
             </div>
         </section>
@@ -234,14 +268,14 @@
                         <div class="carousel-item">
                             <img src="images/Star%204.png" class="d-block w-20 mx-auto" alt="star2">
                             <div class="carousel-caption">
-                                <h5 class="h4 text-start">Star 2</h5>
+                                <h5 class="h4 text-start">Tim Nolan</h5>
                                 <p class="text-start">I recently visited Fighting Star for a new tattoo, and the experience was amazing from beginning to end. The artists were professional, the atmosphere was welcoming, and the final result was even better than I imagined. I couldn’t be happier with my visit!</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/Star%205.png" class="d-block w-20 mx-auto" alt="star3">
                             <div class="carousel-caption">
-                                <h5 class="h4 text-start">Star 3</h5>
+                                <h5 class="h4 text-start">Jessica Wake</h5>
                                 <p class="text-start">Getting my tattoo at Fighting Star was an incredible experience. The team made me feel comfortable from the moment I walked in, and their attention to detail was outstanding. I absolutely love my tattoo and highly recommend this shop to anyone considering getting inked.</p>
                             </div>
                         </div>
@@ -336,18 +370,21 @@
         </section>
 
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title h3" id="exampleModalLabel">Thanks for subscribing!</h1>
+                    <div class="modal-header flex-column pb-0">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h1 class="modal-title h3" id="exampleModalLabel">Thanks for subscribing!</h1>
                     </div>
-                    <div class="modal-body">
-                        Description
+                    <div class="modal-footer pb-4">
+                        <button type="button" class="btn btn-primary mx-auto" data-bs-dismiss="modal">CONTINUE WATCHING</button>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CONTINUE WATCHING</button>
-                    </div>
+                    <figure class="figure figure-1 position-absolute w-25">
+                        <img src="./images/email.svg" class="figure-img img-fluid" alt="email illustration">
+                    </figure>
+                    <figure class="figure figure-2 position-absolute w-25">
+                        <img src="./images/email.svg" class="figure-img img-fluid" alt="email illustration">
+                    </figure>
                 </div>
             </div>
         </div>
