--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="card my-3">
                                 <img src="https://inkster.eu/cdn/shop/files/R564T_600x.png?v=1737557690" class="card-img-top" alt="tatto">
                                 <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <h5 class="card-title">Heart Tattoo</h5>
                                     <p class="card-text">Descriptioin</p>
                                     <a href="#" class="btn btn-primary">Order a tattoo</a>
                                 </div>
@@ -153,7 +153,7 @@
                             <div class="card my-3">
                                 <img src="./images/american.jpg" class="card-img-top" alt="tatto">
                                 <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <h5 class="card-title">Different illustrations</h5>
                                     <p class="card-text">Descriptioin</p>
                                     <a href="#" class="btn btn-primary">Order a tattoo</a>
                                 </div>
@@ -164,7 +164,7 @@
                             <div class="card my-3">
                                 <img src="https://d29osk548knyuf.cloudfront.net/media/images/IMG_1983.original.format-jpeg.jpg" class="card-img-top" alt="tatto">
                                 <div class="card-body">
-                                    <h5 class="card-title">Tatto Example Card</h5>
+                                    <h5 class="card-title">Eagle</h5>
                                     <p class="card-text">Descriptioin</p>
                                     <a href="#" class="btn btn-primary">Order a tattoo</a>
                                 </div>
@@ -396,8 +396,8 @@
                     <strong class="me-auto">First tatoo discount</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
-                <div class="toast-body">
-                    ...
+                <div class="toast-body text-dark">
+                    50% discount valid for another 3 hours!
                 </div>
             </div>
         </div>
